# IroncladDefrag

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  cmake-build.bat  cmake-reconf.bat  cmake-run-elevated.bat  generate-winrt.ps1  main.cpp  packages.config  plan.md  precompiled.h
.aiassistant/rules/: ic-defrag.md
.codex/: arch.md  map.md
model/: FragmentMap.cpp  Units.h
src/: main.cpp  precompiled.cpp  precompiled.h
src/analysis/: DriveAnalysisService.cpp  DriveAnalysisService.h  FakeAnalysisService.cpp  FakeAnalysisService.h
src/app/: ApplicationController.cpp  ApplicationController.h  BackgroundJob.cpp  BackgroundJob.h
src/classification/: FileClassifier.cpp  FileClassifier.h
src/execution/: MoveExecutor.cpp  MoveExecutor.h
src/model/: DiskGeometry.cpp  DiskGeometry.h  DomainTypes.h  FileMetadata.cpp  FileMetadata.h  FragmentMap.cpp  FragmentMap.h  FreeSpaceMap.cpp  FreeSpaceMap.h
src/optimization/: MovePlanner.cpp  MovePlanner.h  OptimizationSettingsSerializer.cpp  OptimizationSettingsSerializer.h  PlacementPlanner.cpp  PlacementPlanner.h  ProfileCatalog.cpp  ProfileCatalog.h
src/persistence/: AppSettingsSerializer.cpp  AppSettingsSerializer.h  AppSettingsStore.cpp  AppSettingsStore.h
src/platform/windows/: DriveEnumerator.cpp  DriveEnumerator.h  UniqueHandle.cpp  UniqueHandle.h  VolumeMoveOperations.cpp  VolumeMoveOperations.h  VolumeQueries.cpp  VolumeQueries.h
src/support/: Logger.cpp  Logger.h
src/ui/: App.cpp  App.h  DriveAnalysisPage.cpp  DriveAnalysisPage.h  DriveListPanel.cpp  DriveListPanel.h  DriveMapPanel.cpp  DriveMapPanel.h  MainFrame.cpp  MainFrame.h  MovePlanDialog.cpp  MovePlanDialog.h  ProfileSettingsDialog.cpp  ProfileSettingsDialog.h  SafetySettingsDialog.cpp  SafetySettingsDialog.h  UIFormatting.cpp  UIFormatting.h  WorkflowPanel.cpp  WorkflowPanel.h
ui/: App.cpp  App.h  IroncladDefragApp.cpp  IroncladDefragApp.h  MainWindow.cpp  MainWindow.h
